# TS_forecasting

./: .env.example  .gitignore  .rag_index.pkl  README.md  pyproject.toml  requirements.txt
demand_forecasting/: RAG_bot.py  base_forecast_layer.py  general_forecasting_functions.py  general_forecasting_imports.py  rag_aider_interview_cheat_sheet.md  rag_aider_interview_cheat_sheet_short.md  sales_preprocessing.py  ts0_preprocessing.py  ts1_diagnostics.py  ts2_plots.py  ts_pipeline_job_example.py  ts_preprocessing.py  ts_preprocessing_job.py  ts_preprocessing_job_example.py
demand_forecasting/Project Prophet v3 (paused)/: Clustering (placeholder with notes).py  Model_ML.py  Stationarity.py
demand_forecasting/jobs/: example_ts012_pipeline_job.py  rossmann_ingest_job.py  rossmann_prep_job.py  rossmann_preprocessing_job.py
demand_forecasting/legacy/: README.md  ROUGH_DRAFT_pyjob_update_fc_so.py
demand_forecasting/legacy_folder/: base_forecast_layer_legacy.py  general_fc_functions_legacy.py  sales_preprocessing_legacy.py
demand_forecasting/rag/: chat_cli.py  config.py  indexing.py
demand_forecasting/reference_folder/: general_fc_functions_legacy.py  general_forecasting_imports.py
demand_forecasting/time_series_pipeline/: example_ts012_pipeline_job.py  forecast_evaluation.py  ts0_preprocessing.py  ts3_forecasting.py  ts_forecast_utils.py  ts_forecasting.py  ts_helper_functions.py  ts_preprocessing_utils.py
src/: cli.py
src/config/: settings.py
src/ts_forecasting/: env_info.py
src/ts_forecasting/rag/: chat_cli.py  (+2 more)
ts_forecasting/rag/: config.py  indexing.py
(+11 files in other folders)
