[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forecasting"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2.4,<3",
    "openai>=2.11.0,<3",
    "numpy>=1.26,<3",
    "scipy>=1.13,<2",
    "pyspark>=4.0.1,<5",
    "statsmodels>=0.14,<1",
    "pyarrow>=15.0",
    "matplotlib>=3.8",
    "pandas>=2.0.0",
    "scikit-learn>=1.2.0",
    "seaborn>=0.12.0",
    "jupyterlab>=4.0.0"
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
forecast-info = "ts_forecasting.env_info:main"
